# chatbot

./: pyproject.toml
1-basicchatbot/: 1-basicchatbot.ipynb
